--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+#line {
+    position: absolute;
+    width: 200px;
+    height: 2px;
+    background: #000;
+    top: 50%;
+    left: 50%;
+    /* transition: transform 0.5s ease-in-out; */
+}
